<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_logo_width"
            android:layout_height="@dimen/img_logo_height"
            android:layout_marginBottom="@dimen/margin_xl"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startSignIn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="40dp"
            android:layout_marginBottom="@dimen/margin_sm"
            android:text="@string/auth"
            app:strokeColor="@color/application"
            app:strokeWidth="@dimen/margin_sm" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startSignUp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="40dp"
            android:text="@string/registration"
            app:strokeColor="@color/application"
            app:strokeWidth="@dimen/margin_sm" />

    </LinearLayout>

<!--
</FrameLayout>-->
